fix overflow on executive orders

--- a/src/sass/partials/_insulted.scss
+++ b/src/sass/partials/_insulted.scss
@@ -40,7 +40,6 @@
     transform-origin: left top;
     transform: rotate(-90deg) translateX(-114px);
     width: 120px;
-    margin-left: 20px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
